--- a/app/src/main/res/layout/activity_receive_file.xml
+++ b/app/src/main/res/layout/activity_receive_file.xml
@@ -21,7 +21,8 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_receive_file" />
+    <include layout="@layout/content_receive_file"
+        android:id="@+id/contentView" />
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
