--- a/app/src/main/res/layout/content_receive_file.xml
+++ b/app/src/main/res/layout/content_receive_file.xml
@@ -12,4 +12,11 @@
     tools:context="com.mchacks.qrtransfer.ReceiveFileActivity"
     tools:showIn="@layout/activity_receive_file">
 
+    <VideoView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/videoView"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 </RelativeLayout>
