--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#4DB2A4</color>
-    <color name="colorPrimaryDark">#4DB2A4</color>
+    <color name="colorPrimaryDark">#064539</color>
     <color name="colorAccent">#FF966A</color>
 </resources>
