--- a/app/src/main/res/layout/content_play_image_slideshow.xml
+++ b/app/src/main/res/layout/content_play_image_slideshow.xml
@@ -19,4 +19,12 @@
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="140dp" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="New Text"
+        android:id="@+id/statusText"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true" />
 </RelativeLayout>
