--- a/app/src/main/res/layout/content_send_file.xml
+++ b/app/src/main/res/layout/content_send_file.xml
@@ -17,13 +17,12 @@
         android:layout_height="wrap_content"
         android:id="@+id/imageView"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="140dp" />
+        android:layout_centerHorizontal="true" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="New Text"
+        android:text=""
         android:id="@+id/statusText"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true" />
