--- a/app/src/main/res/layout/content_send_file.xml
+++ b/app/src/main/res/layout/content_send_file.xml
@@ -18,6 +18,7 @@
         android:id="@+id/imageView"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true" />
+        android:layout_marginTop="50dp" />
 
     <TextView
         android:layout_width="wrap_content"
