--- a/app/src/main/res/layout/content_receive_file.xml
+++ b/app/src/main/res/layout/content_receive_file.xml
@@ -12,11 +12,20 @@
     tools:context="com.mchacks.qrtransfer.ReceiveFileActivity"
     tools:showIn="@layout/activity_receive_file">
 
-    <VideoView
+    <FrameLayout
+        android:id="@+id/cameraPreview"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:layout_weight="1"
+        />
+
+    <SurfaceView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/videoView"
+        android:id="@+id/surfaceView"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
 </RelativeLayout>
