--- a/app/src/main/res/layout/content_receive_file.xml
+++ b/app/src/main/res/layout/content_receive_file.xml
@@ -14,7 +14,7 @@
 
     <FrameLayout
         android:id="@+id/cameraPreview"
-        android:layout_width="fill_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="1"
         />
